# Echo-Protocol

./: .gitmodules  CMakeLists.txt  README.md  installer_script.iss  main.cpp  types.h
.github/workflows/: main.yml
Echo Protocol/: CMakeLists.txt  main.cpp  types.h
Echo Protocol.xcodeproj/: project.pbxproj
Echo Protocol.xcodeproj/project.xcworkspace/xcuserdata/fesedevladicah.xcuserdatad/: UserInterfaceState.xcuserstate
Echo Protocol.xcodeproj/xcuserdata/fesedevladicah.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Echo Protocol.xcodeproj/xcuserdata/fesedevladicah.xcuserdatad/xcschemes/: xcschememanagement.plist
Echo Protocol/code/: init.cpp  logic.cpp  render.cpp  scene.cpp  update.cpp
Echo Protocol/gameUpdates/: update.cpp  update.h
Echo Protocol/headers/: render.h  scene.h
Echo Protocol/logic/: logic.cpp  logic.h
Echo Protocol/render/: render.cpp  render.h
Echo Protocol/scene/: scene.cpp  scene.h
SDL3_mixer.framework/Versions/A/: SDL3_mixer
SDL3_mixer.framework/Versions/A/Resources/: Info.plist
SDL3_mixer.framework/Versions/A/_CodeSignature/: CodeResources
resources/: icon.rc  iconApp.icns
scripts/: build_appimage.sh
src/code/: init.cpp  logic.cpp  render.cpp  scene.cpp  update.cpp
src/core/: core.cpp  core.h  logic.cpp  nightConfig.cpp  render.cpp
src/entities/: bait.cpp  camera.cpp  echo.cpp  entities.h  lamp.cpp  monster.cpp
src/headers/: init.h  logic.h  render.h  update.h
src/scene/: game_scene.cpp  menu_scene.cpp  scene.cpp  scene.h
